# LANGUAGE_Odin

./: Cargo.toml  LEIAME.md  README.md  struct.txt
examples/: example.odin
llvm/: cargo.toml  lib.rs
odin/src/: main.odin
src/: ast.rs  codegen.odin  codegen.rs  ir.rs  lexer.odin  lexer.rs  main.odin  main.rs  parser.odin  parser.rs  semanticanalysis.rs  semantics.odin
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
